# ChangeLog for dev-util/wingide
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Sep 2009; James Rowe <jnrowe@gmail.com> wingide-3.2.0.1.ebuild:
  Keyworded amd64.

  03 Sep 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1-r1.ebuild,
  wingide-3.2.0.1.ebuild:
  Only display x86 maintainer message to x86 users.

  21 Aug 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1-r1.ebuild,
  wingide-3.2.0.1.ebuild:
  Added a call for an x86 maintainer.

*wingide-3.2.0.1 (21 Aug 2009)

  21 Aug 2009; James Rowe <jnrowe@gmail.com> +wingide-3.2.0.1.ebuild,
  +files/wingide-3.2.0.1-use_system_gtk.patch:
  Version bump [19c].

  10 Jun 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1-r1.ebuild:
  Keyworded x86.

  27 May 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1-r1.ebuild:
  Fixed path in .desktop file.

  09 May 2009; James Rowe <jnrowe@gmail.com> -wingide-3.1.8.1.ebuild,
  wingide-3.1.8.1-r1.ebuild:
  Update to include html-lexer-crash patch.

  08 May 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1.ebuild:
  Removed redundant src_compile().

  06 May 2009; James Rowe <jnrowe@gmail.com> wingide-3.1.8.1.ebuild:
  Generate a .desktop file, thanks to Matt Leighton for reporting [d9c].

*wingide-3.1.8.1 (06 May 2009)

  06 May 2009; James Rowe <jnrowe@gmail.com> +wingide-3.1.8.1.ebuild,
  +files/wingide-3.1.8.1-use_system_gtk.patch, +metadata.xml:
  Initial ebuild, by me.
