@@ -3,18 +3,15 @@ Hash: SHA1
 
 AUX wingide-3.1.8.1-use_system_gtk.patch 685 RMD160 e5624b02226d80036ac8599d1de7efd3862fb2d3 SHA1 dc0787fec5cfac7136f8d0af26c118408d271198 SHA256 0b7d5970edf143dc7071a576a9e4898a83a6b4ca52b648490fe30d92db073acf
 AUX wingide-3.2.0.1-use_system_gtk.patch 683 RMD160 20b913b49d0af79a3254fa97f2e6e2808ea9fa92 SHA1 074dddf75ad6e519f95034fd2fd280725032ec79 SHA256 daf3a0d494598998f232f1a2760066c2a7e73bcb9a18d1034cb082b8d5202418
-DIST html-lexer-crash-3.1.8p1-all.tar 225280 RMD160 608434968547a1f2b0f3db90685fad3519efd28a SHA1 37aa28604de3cf997412e826d7dd341e944512c7 SHA256 429134bb8e43c45e5fd047c3f74accbf3f2a6dfd7520499b25ddda76cc471b91
-DIST wingide-3.1.8-1-i386-linux.tar.gz 19202203 RMD160 9d590cfb7c45e7086b34d13dcc2e73e099675740 SHA1 110d657d2e69c0621b5635f14f69e3bf97ac29e5 SHA256 45838f171e0b57dfa6133e44559f6b77b28745a0ecb8009dc285c5fd14e2e9e4
 DIST wingide-3.2.0-1-i386-linux.tar.gz 22095443 RMD160 a6cf82e2957ddcb1801a95e82e5ca188c811575b SHA1 a0552ac94e459e85b14518bf2ad179672abff772 SHA256 7b5279569f2423c10d86c0d9a8d0cd467371d36a1007af68ceab940e52ae3a54
 DIST wingide-3.2.0-1-x86_64-linux.tar.gz 17717917 RMD160 10893188cd783df9e7a985bc05c34ca32a385224 SHA1 ebdba6c7855b3ff9f3fac489619ca20f6a3f5e6c SHA256 0395b08dd99350abbc8c324bcb2a6fa7c7f8b4f21b04e574d5bb53574dd49a3b
-EBUILD wingide-3.1.8.1-r1.ebuild 1961 RMD160 c20ccdc7136d14252abedfad140fea2ba1d91555 SHA1 832169ca04d778cdd1820d77cb1f55c838e7c698 SHA256 45fe1076f6ffdd8e91d85cb59e35f0d0adac2c2e01f137684b957bfb03e42f6a
-EBUILD wingide-3.2.0.1.ebuild 2245 RMD160 58d6ffb2110321c8ad6b1e970d2ae3e218aba2d3 SHA1 5adfb36d1dc20098560100713c195ea5f9a8ca2e SHA256 a48b0b12c2402afe3ba9f0bdbab48c2f11614280be5b20d29b77831fff521146
-MISC ChangeLog 1442 RMD160 3fc5569a22746381baec413dfbb27e659d1d9b5c SHA1 ca451949a920e72bcadf8aa91c79ec2d4356e416 SHA256 b4b4d31c930d2e36cc06f07aaf5f7d8a81cf1af7c738aa499781d329e61fc3ae
+EBUILD wingide-3.2.0.1.ebuild 2244 RMD160 e10e1e9f483537ee0d730128ffa8d5e00c06474d SHA1 1cdae55ec3baf9e0403482ed99acb286cb5ae183 SHA256 bea3fd7c452b96383bcf16e307cd925220a95f546502a40509f9b69b2f9b64a1
+MISC ChangeLog 1559 RMD160 62f4ff7b3f07441730f82b0ae7a2ca0d65e62c38 SHA1 570de8aa086336cc5862c58e7d8a9bd3e52a8a75 SHA256 c19dceac91ddb41855bdd272d29cb3e69e62ddae7be9254335fad4f6b2573614
 MISC metadata.xml 549 RMD160 bb3509bd2608aa598558d7ceb30215972d9097b8 SHA1 605ff5e7131bfe823cc64cb085c5b4720230ba16 SHA256 6ace3c4b534550e42568ef09aa6d1f330acaf3933c4139b1f8ab18a6165a2106
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkq/P30ACgkQzJrj3cAXR0k6DwCgkcEbXodweNHLUx4SaanC8L82
-isgAnA4VcV7BJx11atGGqkoljXIFcpnl
-=2ktk
+iEYEARECAAYFAkrG+EAACgkQzJrj3cAXR0m6iwCfeDl7vuVReVfTpL/MXzGnn3ne
+fAgAnRtJhXDDnvp1gnv7031ph+kaTy+b
+=VrSJ
 -----END PGP SIGNATURE-----
