@@ -1,22 +1,0 @@
-dev-lang/python
-dev-lang/python x11-libs/gtk+:2
-0
-http://wingware.com/pub/wingide/3.1.8/wingide-3.1.8-1-i386-linux.tar.gz http://wingware.com/pub/wingide/3.1.8/patches/html-lexer-crash-3.1.8p1-all.tar
-bindist mirror strip
-http://www.wingware.com/wingide
-wingide
-Proprietary binary-only Python IDE, 'professional' edition
--* x86
-eutils multilib portability toolchain-funcs versionator
-
-
-
-
-1
-
-install postinst unpack
-
-
-
-
-
